# rinha-de-backend-2026

./: .dockerignore  .gitignore  Cargo.toml  DAILY_REPORT_2026-04-21.md  DAILY_REPORT_2026-04-22.md  DAILY_REPORT_2026-04-23.md  Dockerfile  PLANO_REVISAO.md  README.md  config.json  docker-compose.yml  generate-data.sh  info.json  nginx.conf  run-local-k6.sh  run.sh  shell.nix
.github/: pull_request_template.md
.github/workflows/: auto-merge-participant.yml  pr-opened-notify.yml  publish-ghcr-image.yml  publish-submission-image.yml
c/: Makefile
c/include/: rinha.h
c/src/: prepare_refs.c  rinha.c  server.c
c/tests/: core_tests.c
cpp/: CMakeLists.txt
cpp/include/rinha/: classifier.hpp  ivf.hpp  refs.hpp  request.hpp  types.hpp  vectorize.hpp
cpp/src/: classifier.cpp  ivf.cpp  main.cpp  manual_main.cpp  prepare_refs.cpp  refs.cpp  request.cpp  vectorize.cpp
cpp/tests/: core_tests.cpp
cpp/tools/: benchmark_classifier.cpp  benchmark_ivf.cpp  benchmark_kernel.cpp  benchmark_request.cpp  prepare_ivf.cpp
data-generator/: Makefile  main.c
docs/br/: API.md  ARQUITETURA.md  AVALIACAO.md  BUSCA_VETORIAL.md  DATASET.md  FAQ.md  PLANO_IMPLEMENTACAO.md  PLANO_IMPLEMENTACAO_2.md  README.md  REGRAS_DE_DETECCAO.md  SUBMISSAO.md
docs/daily-report/: DAILY_REPORT_2026-04-25.md  DAILY_REPORT_2026-04-26.md  DAILY_REPORT_2026-04-27.md  DAILY_REPORT_2026-05-01.md  DAILY_REPORT_2026-05-02.md  DAILY_REPORT_2026-05-04.md  DAILY_REPORT_2026-05-05.md  DAILY_REPORT_2026-05-06.md  DAILY_REPORT_2026-05-07.md  DAILY_REPORT_2026-05-08.md  DAILY_REPORT_2026-05-09.md  DAILY_REPORT_2026-05-11.md  DAILY_REPORT_2026-05-12.md
docs/daily-report/2026-04/: 2026-04-21.md
docs/en/: API.md  ARCHITECTURE.md  DATASET.md  DETECTION_RULES.md  EVALUATION.md  FAQ.md  README.md  SUBMISSION.md  VECTOR_SEARCH.md
participants/: Acauhi99.json  AndDev741.json  AndreBBM.json  BGLuis.json  BoscoBecker.json  Bulletdev.json  CaioDGallo.json  CarlosDanielS3.json  ChristopheNonato.json  DanielM08.json  Demians12.json  DiogoThomaz.json  EdnaldoLuiz.json  Fiddelis.json  Gabriel-br07.json  GabrielDantasDs.json  GuilhermRodovalho.json  Guilherme0Coelho.json  GustavoQnt.json  GustavoZiaugra.json  Hanake0.json  IanLemee.json  IcaroWil.json  IgorBrizack.json  Ismaellima4.json  IsraelAraujo70.json  JoaoMarcos160.json  JoaoVitorGirardii.json  Joaopdiasventura.json  JordaoGustavo.json  Josehbr.json  JosineyJr.json  Jovinull.json  JulianySavazzi.json  JulioTsutsui.json  KaueFSoares.json  Klleriston.json  LeandroLS.json  Lothyriel.json  LuanMonteiro.json  (+159 more)
src/: classifier.rs  http.rs  lib.rs  main.rs  oracle.rs  payload.rs  refs.rs  vector.rs
test/: test.js
tests/: http_api.rs  official_examples.rs  oracle_smoke.rs  refs_binary.rs  search_parity.rs
tools/: oracle_check.rs  prepare_refs.rs
