[package]
name = "rinha-backend-2026"
version = "0.1.0"
edition = "2024"

[lib]
name = "rinha_backend_2026"
path = "src/lib.rs"

[[bin]]
name = "prepare_refs"
path = "tools/prepare_refs.rs"

[dependencies]
axum = "0.8.6"
flate2 = "1.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
