[package]
name = "rinha-backend-2026"
version = "0.1.0"
edition = "2024"

[lib]
name = "rinha_backend_2026"
path = "src/lib.rs"

[[bin]]
name = "prepare_refs"
path = "tools/prepare_refs.rs"

[[bin]]
name = "oracle_check"
path = "tools/oracle_check.rs"

[dependencies]
axum = "0.8.6"
flate2 = "1.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sonic-rs = "0.5.8"
tokio = { version = "1.48.0", features = ["macros", "net", "rt"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
